# cleaner_onedrive

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: run-tests.yml
cleaner_onedrive/: main.py
tests/: test_main.py
